Creating filters for get_all_neighborhoods
