# src/static/swagger.json
@@ -640,6 +640,20 @@
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "in": "url",
+            "name": "city",
+            "description": "The city that you want the neighborhoods from. It has to be passed with state.",
+            "required": false
+          },
+          {
+            "in": "url",
+            "name": "state",
+            "description": "The state(UF) that you want the neighborhoods from. It has to be passed with city",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful Operation",
